--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Web site created using create-react-app" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <title>Sai Teja | Portfolio</title>
+  <meta name="description" content="Self Developed personal website build with React.js">
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+  <!-- Google / Search Engine Tags -->
+  <meta itemprop="name" content="Sai Teja | Portfolio">
+  <meta itemprop="description" content="Self Developed personal website build with React.js">
+  <meta itemprop="image"
+    content="https://firebasestorage.googleapis.com/v0/b/saitejakalepu-portfolio.appspot.com/o/readme-img.png?alt=media&token=183e207b-9084-4abb-b127-c383a339c819">
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+  <!-- Facebook Meta Tags -->
+  <meta property="og:url" content="">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Sai Teja| Portfolio">
+  <meta property="og:description" content="Self Developed personal website build with React.js">
+  <meta property="og:image"
+  content="https://firebasestorage.googleapis.com/v0/b/saitejakalepu-portfolio.appspot.com/o/readme-img.png?alt=media&token=183e207b-9084-4abb-b127-c383a339c819">
+
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Sai Teja | Portfolio">
+  <meta name="twitter:description" content="Self Developed personal website build with React.js">
+  <meta name="twitter:image"
+  content="https://firebasestorage.googleapis.com/v0/b/saitejakalepu-portfolio.appspot.com/o/readme-img.png?alt=media&token=183e207b-9084-4abb-b127-c383a339c819">
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+</body>
+
 </html>
